<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiesActivity">
    <EditText
        android:id="@+id/eT_FName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_name"
        android:background="@drawable/edit_re"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/eT_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:background="@drawable/edit_re"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eT_FName"
        />

    <EditText
        android:id="@+id/eT_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number"
        android:background="@drawable/edit_re"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eT_Email"
        />


    <EditText
        android:id="@+id/eT_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/star"
        android:gravity="center"
        android:background="@drawable/edit_re"
        android:backgroundTint="#C1C0C0"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:inputType="numberPassword"
        android:drawableEnd="@drawable/ic_baseline_visibility_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eT_number"
        />



    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_read_and_accepet"
        android:checked="true"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_22sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_Password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_23sdp"
        android:textSize="@dimen/_11sdp"
        android:textColor="@color/logo"
        android:text="@string/home_servies_thems_amp_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@id/eT_Password" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="@dimen/_20sdp"
        android:textSize="@dimen/_16sdp"
        android:background="@drawable/btn"
        android:textColor="@color/white"
        android:textStyle="bold"

        android:layout_marginTop="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/have_account"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/sign_in"
        android:textColor="@color/logo"
        android:textColorHint="@color/logo"
        android:textSize="@dimen/_22sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_27sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>