<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.Fragment1"
    android:orientation="vertical"
    >


        <EditText
            android:id="@+id/eT_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/edit_re"
            android:layout_marginTop="@dimen/_55sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />


        <EditText
            android:id="@+id/eT_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="*******************"
            android:gravity="center"
            android:background="@drawable/edit_re"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:inputType="numberPassword"
            android:drawableEnd="@drawable/ic_baseline_visibility_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eT_Email"
            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Remember_me"
            android:checked="true"
            android:textSize="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_22sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eT_Password" />



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23sdp"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/logo"
            android:text="Forget Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/eT_Password" />

        <Button
            android:id="@+id/btn_loging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:padding="@dimen/_20sdp"
            android:textSize="@dimen/_16sdp"
            android:background="@drawable/btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:text="@string/have_account"
            android:textSize="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox" />

        <Button
            android:id="@+id/btn_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/sign_in"
            android:textColor="@color/logo"
            android:textColorHint="@color/logo"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_27sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>