<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity2">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/logo"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Setting"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <EditText
        android:id="@+id/eT_FName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_name"
        android:background="@drawable/edit_re"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        />

    <EditText
        android:id="@+id/eT_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:background="@drawable/edit_re"

        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eT_FName"
        />
    <EditText
        android:id="@+id/eT_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number"
        android:background="@drawable/number"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eT_Email"
        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/_23sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_baseline_image_24"
        android:inputType="textPersonName"
        android:text="Image Problem"
        android:textSize="@dimen/_17sdp"
        android:textAlignment="center"
        android:background="@drawable/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_number" />

    <TextView
        android:id="@+id/image_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="image must be no more than 2 MB "
        android:textSize="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

</androidx.constraintlayout.widget.ConstraintLayout>